--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 
-/*
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -111,7 +106,7 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #49bf9d;
+		color: #c0cac7;
 		text-decoration: none;
 	}
 
@@ -2150,7 +2145,7 @@ input, select, textarea {
 
 	ol {
 		list-style: decimal;
-		margin: 0 0 2em 0;
+		margin: 0 0 7px 0;
 		padding-left: 1.25em;
 	}
 
@@ -2169,7 +2164,7 @@ input, select, textarea {
 		}
 
 		ul.alt {
-			list-style: none;
+			list-style: inside;
 			padding-left: 0;
 		}
 
@@ -2563,7 +2558,7 @@ input, select, textarea {
 
 		.work-item h3 {
 			font-size: 1em;
-			margin: 0 0 0.5em 0;
+			margin: 0 0 0.5em 1px;
 		}
 
 		.work-item p {
@@ -2591,20 +2586,20 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #1f1815;
-		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
-		color: rgba(255, 255, 255, 0.5);
-		height: 100%;
-		left: 0;
-		padding: 8em 4em;
-		position: fixed;
-		text-align: right;
-		top: 0;
-		width: 35%;
+        /* background-color: #1f1815; */
+        background-attachment: scroll;
+        background-image: url(../../images/bg.jpg);
+        background-position: center !important;
+        background-repeat: no-repeat;
+        background-size: auto;
+        color: rgba(255, 255, 255, 0.5);
+        height: 100%;
+        left: 0;
+        padding: 6em 3em;
+        position: fixed;
+        text-align: center;
+        top: 0;
+        width: 30%;
 	}
 
 		#header > * {
@@ -2684,7 +2679,7 @@ input, select, textarea {
 	#main {
 		margin-left: 35%;
 		max-width: 54em;
-		padding: 8em 4em 4em 4em;
+		padding: 3em 4em 4em 4em;
 		width: calc(100% - 35%);
 	}
 
@@ -3011,6 +3006,7 @@ input, select, textarea {
 
 				#header > .inner {
 					margin-bottom: 0;
+					margin-top: 30px;
 				}
 
 		/* Footer */
@@ -3219,3 +3215,37 @@ input, select, textarea {
 			}
 
 	}
+
+.hv-font-heading{
+    font-size: 42px;
+    font-weight: 700;
+    font-variant: petite-caps;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.hv-portfolio-heading{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-family: serif;
+    text-decoration-line: underline;
+}
+
+.hv-portfolio-sub-heading{
+	font-family: Lucida Sans;
+    font-weight: 700;
+    margin: 0%;
+    font-variant: all-petite-caps;
+    border-bottom: groove;
+    border-color: #c5c7ca;
+    display: inline;
+}
+
+.hv-animated-modal {
+  max-width: 550px;
+  border-radius: 4px;
+  overflow: hidden;
+  
+  transform: translateY(-50px);
+  transition: all .7s;
+}
